# PRRev

./: .gitignore  README.md  pyproject.toml
src/prrev/: cli.py  config.py  formatter.py  git.py  github.py  reviewer.py
src/prrev/llm/: anthropic.py  base.py  openai.py
tests/: test_cli.py  test_config.py  test_formatter.py  test_git.py  test_parsing.py  test_providers.py  test_reviewer.py
