[project]
name = "prrev"
dynamic = ["version"]
description = "CLI tool that reviews code diffs using LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "gitpython>=3.1",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.50",
    "tiktoken>=0.7",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
prrev = "prrev.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/prrev/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/prrev"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
